fixed bugs on beta deploy, overflow causing white space and images that sized too large

--- a/epic/src/sass/carousel.scss
+++ b/epic/src/sass/carousel.scss
@@ -3,9 +3,10 @@
     left: 0;
     margin-top: -35px;
     width: 100%;
-    height: 100%;
-    max-height: 550px;
+    // max-height: 550px;
+    max-height: 550px !important;
     z-index: 100;
+    position: relative;
     .slidescss {
         width: 100%;
         height: 100%;
