--- a/epic/src/sass/navbars.scss
+++ b/epic/src/sass/navbars.scss
@@ -77,6 +77,7 @@
             justify-content: space-around;
             min-width: 430px;
             align-items: flex-end;
+            z-index: 1000;
             p {
                 margin: 0 auto;
                 padding: 8px;
@@ -505,7 +506,7 @@
                     align-items: baseline !important;
                     border: none;
                     h1 {
-                        transition: all 0.4s ease !important;
+                        // transition: all 0.4s ease !important;
                         height: 85px !important;
                         display: flex;
                         flex-wrap: wrap;
@@ -584,8 +585,8 @@
         border: 4px solid #54504a;
     }
     a:hover {
-        max-width: 200px;
-        box-sizing: border-box;
+        max-width: 200px !important;
+        box-sizing: border-box !important;
         height: 65px;
         display: flex;
         background: #54504a;
@@ -610,10 +611,11 @@
         height: auto;
     }
     .nav-item:hover .droptop {
-        width: auto;
-        max-width: 200px;
+        width: auto !important;
+        max-width: 200px !important;
         border: 1px solid purple;
-        display: block !important
+        display: block !important;
+        box-sizing: border-box !important;
     }
 }
 
